data/derived/comb/progs/unify/prog3446.ml.out
Characters 24-27:
  let mine = buildAverage(2.0, 4.0);;
                          ^^^
Error: This expression has type float but an expression was expected of type
         expr
